--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch",
+    "start": "webpack-dev-server",
     "build": "webpack"
   },
   "author": "",
@@ -23,6 +23,7 @@
     "webpack": "^1.12.11"
   },
   "devDependencies": {
-    "extract-text-webpack-plugin": "^1.0.1"
+    "extract-text-webpack-plugin": "^1.0.1",
+    "webpack-dev-server": "^1.9.0"
   }
 }
