--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot --inline",
+    "start": "webpack-dev-server --hot --progressive --inline",
     "build": "webpack"
   },
   "author": "",
@@ -47,6 +47,7 @@
     "bootstrap-sass": "^3.3.7",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "postcss-loader": "^2.0.5",
